--- a/finanzas/templates/partials/_header.html
+++ b/finanzas/templates/partials/_header.html
@@ -13,7 +13,7 @@
           
           {% if user.is_authenticated %}
             <a href="{% url 'dashboard' %}" class="text-gray-600 hover:bg-gray-100 px-3 py-2 rounded-md text-sm font-medium">Dashboard</a>
-            <a href="{% url 'crear_transacciones' %}" class="text-gray-600 hover:bg-gray-100 px-3 py-2 rounded-md text-sm font-medium">Nueva Transacción</a>
+            <!--<a href="{% url 'crear_transacciones' %}" class="text-gray-600 hover:bg-gray-100 px-3 py-2 rounded-md text-sm font-medium">Nueva Transacción</a>-->
             <a href="{% url 'lista_transacciones' %}" class="text-gray-600 hover:bg-gray-100 px-3 py-2 rounded-md text-sm font-medium">Registro Transacciones</a>
             <form action="{% url 'logout' %}" method="post" class="inline">
               {% csrf_token %}
