--- a/finanzas/templates/partials/_header.html
+++ b/finanzas/templates/partials/_header.html
@@ -1,10 +1,10 @@
 {% load static %}
-<nav class="bg-white shadow-md">
+<header class="bg-white shadow-md">
   <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
     <div class="flex items-center justify-between h-16">
       <div class="flex-shrink-0">
-        <a href="{% url 'home' %}" class="flex items-center space-x-2">
-          <img src="{% static 'img/Logo.svg' %}" alt="Logo de FinanzasApp" class="h-10 w-auto">
+                <a href="{% url 'home' %}" class="flex items-center space-x-1">
+          <img src="{% static 'img/Logo.svg' %}" alt="Logo de FinanzasApp" class="h-12 w-auto">
           <span class="text-2xl font-bold text-indigo-600 hover:text-indigo-800">
             FinanzasApp
           </span>
@@ -40,4 +40,4 @@
       </div>
     </div>
   </div>
-</nav>
+</header>
