--- a/finanzas/templates/procesamiento_automatico.html
+++ b/finanzas/templates/procesamiento_automatico.html
@@ -13,7 +13,7 @@
         </p>
         
         {% if not user.socialaccount_set.all %}
-            <a href="{% provider_login_url 'google' %}" class="inline-block bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded shadow-lg">
+            <a href="{% provider_login_url 'google' auth_params='access_type=offline&prompt=consent' %}" class="inline-block bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded shadow-lg">
                 <i class="fab fa-google mr-2"></i> Conectar con Google Drive
             </a>
         {% else %}
