--- a/finanzas/templates/partials/_header.html
+++ b/finanzas/templates/partials/_header.html
@@ -3,7 +3,7 @@
   <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
     <div class="flex items-center justify-between h-16">
       <div class="flex-shrink-0">
-                <a href="{% url 'home' %}" class="flex items-center space-x-1">
+            <a href="{% url 'home' %}" class="flex items-center space-x-1">
           <img src="{% static 'img/Logo.svg' %}" alt="Logo de FinanzasApp" class="h-12 w-auto">
           <span class="text-2xl font-bold text-indigo-600 hover:text-indigo-800">
             FinanzasApp
@@ -15,6 +15,7 @@
           {% if user.is_authenticated %}
             <a href="{% url 'dashboard' %}" class="text-gray-600 hover:bg-gray-100 px-3 py-2 rounded-md text-sm font-medium">Dashboard</a>
             <a href="{% url 'lista_transacciones' %}" class="text-gray-600 hover:bg-gray-100 px-3 py-2 rounded-md text-sm font-medium">Registro Transacciones</a>
+            <a href="{% url 'revisar_tickets' %}" class="text-gray-600 hover:bg-gray-100 px-3 py-2 rounded-md text-sm font-medium">Revisar Tickets Pendientes</a>
             <form action="{% url 'logout' %}" method="post" class="inline">
               {% csrf_token %}
               <button type="submit" class="text-gray-600 hover:bg-gray-100 px-3 py-2 rounded-md text-sm font-medium text-left w-full">
