--- a/finanzas/templates/lista_transacciones.html
+++ b/finanzas/templates/lista_transacciones.html
@@ -12,6 +12,9 @@
             <a href="{% url 'procesamiento_automatico' %}" class="bg-green-600 text-white font-semibold px-4 py-2 rounded-lg shadow-md hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2 transition duration-150 ease-in-out">
                 + Añadir Automáticamente
             </a>
+            <a href="{% url 'revisar_tickets' %}" class="bg-green-600 text-white font-semibold px-4 py-2 rounded-lg shadow-md hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2 transition duration-150 ease-in-out">
+                Revisar Tickets Pendientes
+            </a>
         </div>
     </div>
     <div class="bg-white shadow-lg rounded-lg overflow-hidden">
